# documents

auturbo_2017_oroca_seminar/: link.txt
auturbo_2017_spring/key_to_vel_pkg/: CMakeLists.txt
auturbo_2017_spring/key_to_vel_pkg/src/: key_to_vel.cpp  viewer.cpp
auturbo_2017_spring_ros_camp/key_to_vel_pkg/: package.xml
auturbo_2017_spring_ros_camp/key_to_vel_pkg/msg/: VelMsg.msg
auturbo_2017_spring_ros_camp/key_to_vel_pkg/src/: key_to_vel_py.py  robot.cpp  trigger.cpp
auturbo_2018_oroca_seminar/: Exhibition Banner.pptx  ppt_link
auturbo_2018_spring/: auturbo_2018_spring_week1.pptx  auturbo_2018_spring_week2.pptx
auturbo_2018_spring/auturbo_2018_spring_week3/: auturbo_2018_spring_week3_rosprogramming2.pptx
auturbo_2018_spring/auturbo_2018_spring_week3/calculator/: CMakeLists.txt  package.xml
auturbo_2018_spring/auturbo_2018_spring_week3/calculator/nodes/: number_accumulator.py  number_generator.py
auturbo_2018_spring/auturbo_2018_spring_week3/calculator/src/: number_accumulator.cpp  number_generator.cpp
auturbo_2018_spring/auturbo_2018_spring_week4/: auturbo_2018_spring_week4_opencv.odp
auturbo_2018_spring/auturbo_2018_spring_week4/training_opencv/src/: Homograpy.py  calibration.py  edge.py  mask.py  publisher.py  publisher2.py
auturbo_2018_spring/auturbo_2018_spring_week5/: AuTURBO 2018 – training Week 5.pptx
auturbo_2018_spring/auturbo_2018_spring_week5/example_code/: const1.py  const2.py  const3.py  const4.py  mnist1.ipynb  mnist2.ipynb  ph1.py  ph2.py  var1.py  var2.py  var3.py  var4.py
auturbo_2018_spring/auturbo_2018_spring_week7/: auturbo_2018_spring_week7_ros_turtlebot3.pptx
auturbo_2018_spring/auturbo_2018_spring_week8/: .~lock.auturbo_2018_spring_week7_ros_turtlebot3.pptx#  auturbo_2018_spring_week8_ros_turtlebot3.pptx
auturbo_2018_spring/training_opencv/: CMakeLists.txt
auturbo_2018_spring/training_opencv/src/: detecting_rectangular.py  display_image.py  gray.py  haarcascade.py
auturbo_2019_spring/auturbo_2019_spring_week1/: .~lock.auturbo_2019_spring_week1_dev_settings.pptx#  auturbo_2019_spring_week1_dev_settings.pptx
auturbo_2019_spring/auturbo_2019_spring_week2/: auturbo_2019_spring_week2_ros_concepts.pptx
auturbo_2019_spring/auturbo_2019_spring_week3/: auturbo_2019_spring_week3_ros_programming.pptx
auturbo_2019_spring/auturbo_2019_spring_week4/: auturbo_2019_spring_week4_opencv.odp
auturbo_2019_spring/auturbo_2019_spring_week4/gazebo/velodyne_plugin/: velodyne.world
auturbo_2019_spring/auturbo_2019_spring_week4/training_opencv/: package.xml
auturbo_2019_spring/auturbo_2019_spring_week5/drone/: 00_AuTurbo_Drone.pptx
auturbo_2019_spring/auturbo_2019_spring_week5/openai/: openai_ros.odp  openai_ros.pptx
(+17 files in other folders)
