<?xml version="1.0"?>
<package>
  <name>key_to_vel_pkg</name>
  <version>0.0.1</version>
  <description>The key_to_vel_pkg package</description>

  <maintainer email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>

  <export> </export>
</package>
