<?xml version="1.0"?>
<package format="2">
  <name>calculator</name>
  <version>0.0.1</version>
  <description>The calculator package</description>

  <author email="jung.ryuwoon@gmail.com">Leon Ryuwoon jung</author>
  <maintainer email="jung.ryuwoon@gmail.com">Leon Ryuwoon Jung</maintainer>

  <license>GPL-3.0</license>

  <url type="facebook">https://www.facebook.com/contact2auturbo/</url>
  <url type="repository">https://www.github.com/auturbo/</url>
  <url type="bugtracker">https://www.github.com/auturbo/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
